[package]
name = "temis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
cargo = "0.74.0"
clap = { version = "4.4.7", features = ["derive"] }
jq-rs = { version = "0.4.1", features = ["bundled"] }
near-abi-client = { workspace = true }
near-sdk = "4.1.1"
near-workspaces = "0.9.0"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = "1.28.2"
