[package]
name = "temis"
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Gomes <eduardogbg@gmail.com>","Claudio <claudiocarvalhovilasboas@gmail.com>"]
description = "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
license = "MIT OR Apache-2.0"

repository = "https://github.com/eduardogbg/temis"
documentation = "https://docs.your_crate_name.com"
readme = "../README.md"
[dependencies]
anyhow = "1.0.75"
cargo = "0.74.0"
clap = { version = "4.4.7", features = ["derive"] }
jq-rs = { version = "0.4.1", features = ["bundled"] }
near-abi-client = { workspace = true }
near-sdk = "4.1.1"
near-workspaces = "0.9.0"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = "1.28.2"
